--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ mapra_add_test(example_test)
 # ##############################################################################
 
 # hier muesst ihr eure weiteren Dateien, also Abhaengigkeiten, hinzufuegen
-add_executable(a_stern src/a_stern.cpp src/maze_graph.cpp src/coordinate_graph.cpp ${a_stern_unit})
+add_executable(a_stern src/a_stern.cpp src/maze_graph.cpp src/coordinate_graph.cpp src/random_maze.cpp ${a_stern_unit})
 
 # Setzt diese Variable auf ON, wenn ihr Teil b bearbeitet
 option(teil_b "use SFML for part b" OFF)
